Added qr screen. Permission for camera screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
     <string name="no_internet_connection">Нет интернет соединения</string>
     <string name="check_internet_settings">Проверьте настройки вашего интернета и попробуйте еще раз</string>
     <string name="check_again">Попробовать еще раз</string>
+    <string name="bring_list_with_code_qr">Поднесите лист с кодом полученый от управляющей компании</string>
+    <string name="enter_code_manually">Ввести код вручную</string>
+    <string name="dont_have_permission_to_camera">Похоже, у нас нет доступа к вашей камере</string>
+    <string name="please_need_request_to_camera_for_enter_app">Пожалуйста, разрешите доступ к вашей камере, это необходимо для входа в приложение</string>
+    <string name="enable_access">Разрешить доступ</string>
+    <string name="enable_access_settings">Перейти в настройки</string>
+    <string name="have_to_go_setting_to_enable_access_to_camera">Необходимо перейти в настройки, чтобы предоставить доступ</string>
+    <string name="enter_manually">Ввести вручную</string>
 </resources>
