add photo to appeal activity. select category

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,8 @@
 
     <string name="no_camera">На Вашем устройстве отсутствует камера</string>
 
+    <string name="chose_picture">Выберите фото</string>
+    <string name="gallery_permission">Для просмотра фотографий из галереи, небходимо разрешение.</string>
+    <string name="gallery_permission_request">Откройте разрешения и добавьте разрешение на доступ к памяти.</string>
+
 </resources>
