added intent to appeal activity from other fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,5 +90,7 @@
     <string name="chose_picture">Выберите фото</string>
     <string name="gallery_permission">Для просмотра фотографий из галереи, небходимо разрешение.</string>
     <string name="gallery_permission_request">Откройте разрешения и добавьте разрешение на доступ к памяти.</string>
+    
+    <string name="apply_to_support">Обратиться в поддержку</string>
 
 </resources>
