--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,5 +80,13 @@
 
     <string name="attach_photo">Прикрепить фото</string>
     <string name="what_the_problem_you_have">Какая проблема у вас возникла?</string>
+    <string name="day">День</string>
+    <string name="week">Неделя</string>
+    <string name="month">Месяц</string>
+    <string name="year">Год</string>
+    <string name="energy_label">Электроэнергия</string>
+    <string name="rub_measure">%.0f &#8381;</string>
+    <string name="total">Всего</string>
+    <string name="average">В среднем</string>
 
 </resources>
