--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,5 +124,7 @@
     <string name="videophone">Видеофон</string>
 
     <string name="categories_loading">Подождите, категории загружаются…</string>
-    
+    <string name="no_data_for_period"><![CDATA[Нет данных за выбранный период]]></string>
+    <string name="no_data">Нет данных</string>
+
 </resources>
